fixed scrolling, board header alignment, nav hover color

--- a/client/assets/css/site.css
+++ b/client/assets/css/site.css
@@ -4,6 +4,9 @@
 }
 body {
   font-family: myFont;
+  overflow: hidden; 
+  max-width: 100%; 
+  max-height: 100%;
 }
 
 .activeOption {
@@ -42,7 +45,7 @@ h4 {
 }
 
 #navButton:hover {
-    background-color:teal;    
+    background-color:#EB7260;    
 }
 #footer {
    padding-left:10px;
